# Neuromorphic-Computing-Infrastructure

./: README.md
docs/design/: requirement_analysis.md
docs/design/frontend/: README.md
docs/design/intermeadiate language/: README.md
docs/design/optimization/: README.md
snn-lang/: CMakeLists.txt
snn-lang/ir/: CMakeLists.txt
snn-lang/ir/include/mir/components/: actor.h  expression.h  topology.h
snn-lang/ir/mir/components/: actor.h
snn-lang/ir/src/mir/components/: actor.cpp  expression.cpp
snn-lang/ir/test/: test_build_possion_lif_mir.cpp
